--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/4fXuLZPBrGc?si=vM0bi434guTQRQci" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+
+
     </section>
-    
+    <section class="categoria">
+        <h2>Crochês da Gabi...</h2>
+        <div class="categoria-videos">
+            <a href="">
+                <img src="">
+            </a>
+        </div>
+    </section>
+
 </body>
 </html>
