--- a/index.html
+++ b/index.html
@@ -24,9 +24,22 @@
     <section class="categoria">
         <h2>Crochês da Gabi...</h2>
         <div class="categoria-videos">
-            <a href="">
-                <img src="">
+            <a href="https://www.youtube.com/watch?v=zfPSb0qzxE4">
+                <img src="https://img.youtube.com/vi/zfPSb0qzxE4/maxresdefault.jpg">
             </a>
+            <a href="https://www.youtube.com/watch?v=slIZimbwxKQ">
+                <img src="https://img.youtube.com/vi/slIZimbwxKQ/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=EHs6t0q0Vx0">
+                <img src="https://img.youtube.com/vi/EHs6t0q0Vx0/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=FFh8hPWiOgI">
+                <img src="https://img.youtube.com/vi/FFh8hPWiOgI/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/watch?v=FNcbCnpp7_0">
+                <img src="https://img.youtube.com/vi/FNcbCnpp7_0/maxresdefault.jpg">
+            </a>
+
         </div>
     </section>
 
